# simpleprojcpp

./: CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/sa_utilslib/: CMakeLists.txt  easylogging++.h  sa_LoggingUtils.cpp  sa_LoggingUtils.h
src/libs/utilslib/: CMakeLists.txt  easylogging++.cc
tests/: CMakeLists.txt
